fix side scroll on mobile

--- a/ember/app/styles/_mixins.scss
+++ b/ember/app/styles/_mixins.scss
@@ -24,6 +24,7 @@
   flex:  $values;
 }
 @mixin center-x{
+  -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
   position: absolute;
   left: 50%;
